--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha.5",
   "homepage": "https://github.com/Needlworks/Textcube",
   "authors": [
-    "Needlworks <contact@needlworks.org>"
+    "Needlworks <fuck@needlworks.org>"
   ],
   "description": "Textcube: Personalized web publishing platform with multi-user support.",
   "main": "setup.php",
